# meshcore_sim

./: BUILDSCRIPT_COLLISIONS.sh  CLAUDE.md  EXAMPLES.md  PLAN.md  PRIVATEROUTING1.md  QUICKSTART_COLLISIONS.md  README.md  setup_meshcore.sh
demo/: room_server_demo.py
docs/: BUG_LBT_RACE_CONDITION.md
experiments/: __main__.py  privacy.py  runner.py  scenarios.py
node_agent/: CMakeLists.txt  README.md  SimNode.cpp  SimNode.h  SimRadio.cpp  SimRadio.h  main.cpp
node_agent/arduino_shim/: base64.hpp
orchestrator/: __init__.py  __main__.py  adversarial.py  airtime.py  channel.py  cli.py  config.py  metrics.py  node.py  packet.py  router.py  topology.py  tracer.py  traffic.py
privatemesh/: README.md
privatemesh/adaptive_delay/: CMakeLists.txt  README.md  SimNode.cpp  SimNode.h  main.cpp
privatemesh/nexthop/: CMakeLists.txt  SimNode.cpp  SimNode.h
privatemesh/path2/: CMakeLists.txt  SimNode.cpp  SimNode.h
privatemesh/privaterouting1/: CMakeLists.txt  SimNode.cpp  SimNode.h  main.cpp
sim_tests/: helpers.py  test_adaptive_delay.py  test_airtime.py  test_config.py  test_grid_routing.py  test_integration_smoke.py  test_node_agent.py  test_packet_decode.py  test_privacy_baseline.py  test_room_server.py  test_tracer.py
tools/: README.md  fetch_topology.py  import_topology.py
topologies/: adversarial.json  boston_relays.json  boston_relays_2026_03_17.json  gdansk.json  linear_three.json  star_five.json
viz/: __main__.py  app.py
workbench/: app.py  map_helpers.py  topology_editor.py  trace_loader.py  trace_viewer.py
